# ece-world-paris-ing1-2022-2023-nintendeau

./: .gitignore  CMakeLists.txt  README.md  main.c
MODIFIEZ_ICI/: flappy_bird.c  geometry_dash.c  jackpot.c  palais_des_glaces.c  paris_hippiques.c  tape_taupe.c
attractions/: EXEMPLEDEGRAVITE.c  TAPE TAUPE.c  attraction_4.c  attraction_alfred.c  geometry_dash.c  guitar_hero.c  guiter_hero.c  jackpot  jackpot.c  palais_des_glaces.c  paris_hippiques  paris_hippiques.c  snake.c  tag.c
attractions/assets/: best_scores.txt  temp.txt
attractions/assets/flappy_bird/: rules.txt
attractions/assets/geometry_dash/: rules.txt
attractions/assets/guitar_hero/: rules.txt
attractions/assets/jackpot/: rules.txt
attractions/assets/palais_des_glaces/: rules.txt
attractions/assets/paris_hippiques/: rules.txt
attractions/assets/snake/: rules.txt
attractions/assets/tag/: rules.txt
attractions/assets/tape_taupe/: rules.txt
attractions/header/: flappy_bird.h  geometry_dash.h  guitar_hero.h  jackpot.h  loader.h  palais_des_glaces.h  paris_hippiques.h  player.h  snake.h  tag.h  tape_taupe.h
attractions/source/: flappy_bird.c  geometry_dash.c  guitar_hero.c  jackpot.c  loader.c  palais_des_glaces.c  paris_hippiques.c  snake.c  tag.c  tape_taupe.c
attractionsexecsolo/: flappy_bird.c  jackpot.c  palais_des_glaces.c  paris_hippiques.c  tag.c  tape_taupe.c  test_integration.c
headers/: attraction_1.h  attraction_2.h  attraction_3.h  attraction_4.h  flappy_bird.h  geometry_dash.h  guitar_hero.h  jackpot.h  palais_des_glaces.h  tag.h
presentation/: presentation.md
presentation/sujet/: ING1-2022-2023-bareme-projet-S2 final.xlsx
